--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ paper_renders/*
 !pretrained/.gitkeep
 !body_models/.gitkeep
 
+clamp.sh
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
